syntax = "proto3";

import "proto/transaction.proto";

package slog.internal;

message Batch {
    uint32 id = 1;
    repeated Transaction transactions = 2;
    // All txns in this batch has this same type.
    // Can either be SINGLE_HOME or MULTI_HOME. 
    // LOCK_ONLY txns are also considered SINGLE_HOME.
    TransactionType transaction_type = 3;
    // For recording the event time for all
    // transactions in this batch simultaneously
    repeated TransactionEvent events = 4;
    repeated int64 event_times = 5;    // when the events took place
    repeated uint32 event_machines = 6; // where the events took place
}

message BatchOrder {
    uint32 batch_id = 1;
    uint32 slot = 2;
}

message Envelope {
    oneof type {
        Request request = 1;
        Response response = 2;
        bytes raw = 3;
    }
    uint32 from = 4;
}

/***********************************************
                    REQUESTS
***********************************************/
/**
 * The first message of a communication between two entities is
 * always a Request. Some types of Request needs a Response
 * (e.g. LookUpMasterRequest); these requests end with "Request".
 * Some others are one-way requests (e.g. PaxosPropose) and do not 
 * end with "Request".
 */
message Request {
    oneof type {
        EchoRequest echo = 1;
        BrokerReady broker_ready = 2;
        BrokerRedirect broker_redirect = 3;
        ForwardTransaction forward_txn = 4;
        LookupMasterRequest lookup_master = 5;
        ForwardBatch forward_batch = 6;
        PaxosPropose paxos_propose = 7;
        PaxosAcceptRequest paxos_accept = 8;
        PaxosCommitRequest paxos_commit = 9;
        LocalQueueOrder local_queue_order = 10;
        RemoteReadResult remote_read_result = 11;
        CompletedSubtransaction completed_subtxn = 12;
        StatsRequest stats = 13;
    }
}

/**
 * For debugging and testing purposes
 */
message EchoRequest {
    bytes data = 1;
}

/**
 * Used by the Broker to notify others its presence. Some
 * identifiers are included so that the receivers can build a
 * map of the whole network.
 */
message BrokerReady {
    bytes ip_address = 1;
    uint32 machine_id = 2;
}

message BrokerRedirect {
    uint32 tag = 1;
    uint32 channel = 2;
    bool stop = 3;
}

message ForwardTransaction {
    Transaction txn = 1;
}

message LookupMasterRequest {
    repeated uint32 txn_ids = 1;
    repeated string keys = 2;
}

message ForwardBatch {
    oneof part {
        Batch batch_data = 1;
        BatchOrder batch_order = 2;
    }
    // Batches generated by the same machine need to follow the
    // order of creation. This field is used to number the batches
    // following that order. It always start from 0 and increment by 1
    uint32 same_origin_position = 3;
}

message PaxosPropose {
    uint32 value = 1;
}

message PaxosAcceptRequest {
    uint32 ballot = 1;
    uint32 slot = 2;
    uint32 value = 3;
}

message PaxosCommitRequest {
    uint32 ballot = 1;
    uint32 slot = 2;
    uint32 value = 3;
}

message LocalQueueOrder {
    // queue_id is the partition that the 
    // batch queue is generated from
    uint32 queue_id = 1;
    uint32 slot = 2;
}

message RemoteReadResult {
    uint32 txn_id = 1;
    uint32 partition = 2;
    map<string, string> reads = 3;
    bool will_abort = 4;
    string abort_reason = 5;
}

message CompletedSubtransaction {
    Transaction txn = 1;
    uint32 partition = 2;
}

message StatsRequest {
    uint32 id = 1;
    uint32 level = 2;
}

/***********************************************
                    RESPONSES
***********************************************/
/**
 * A response is always preceeded by a Request
 */
message Response {
    oneof type {
        EchoResponse echo = 1;
        LookupMasterResponse lookup_master = 2;
        PaxosAcceptResponse paxos_accept = 3;
        PaxosCommitResponse paxos_commit = 4;
        StatsResponse stats = 6;
    }
}

/**
 * For debugging and testing purposes
 */
message EchoResponse {
    bytes data = 1;
}

message LookupMasterResponse {
    repeated uint32 txn_ids = 1;
    map<string, MasterMetadata> master_metadata = 2;
}

message PaxosAcceptResponse {
    uint32 ballot = 1;
    uint32 slot = 2;
}

message PaxosCommitResponse {
    uint32 slot = 1;
}

message StatsResponse {
    uint32 id = 1;
    bytes stats_json = 2;
}